--- a/shootgame/app/src/main/AndroidManifest.xml
+++ b/shootgame/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="startGame"/>
+                <category android:name="startGame"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+
 
         </activity>
 
