--- a/shootgame/app/src/main/AndroidManifest.xml
+++ b/shootgame/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:icon="@mipmap/hero1"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:largeHeap="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".Main2Activity" >
             <intent-filter>
